force-app/main/default/objects/CC_Prevision__c/CC_Prevision__c.object-meta.xml
<CustomObject>
    <label>Previsión</label>
    <nameField>
        <displayFormat>PR-{00000000}</displayFormat>
        <label>Previsión Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Previsiones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>