force-app/main/default/objects/CC_Prevision__c/fields/CC_00__c.field-meta.xml
<CustomField>
    <fullName>CC_00__c</fullName>
    <label>Hora 00</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>