force-app/main/default/objects/CC_Prevision__c/fields/CC_01__c.field-meta.xml
<CustomField>
    <fullName>CC_01__c</fullName>
    <label>Hora 01</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>