force-app/main/default/objects/CC_Prevision__c/fields/CC_03__c.field-meta.xml
<CustomField>
    <fullName>CC_03__c</fullName>
    <label>Hora 03</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>