force-app/main/default/objects/CC_Prevision__c/fields/CC_Activo__c.field-meta.xml
<CustomField>
    <fullName>CC_Activo__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Campo utilizado para saber si esta activo el registro</description>
    <label>Activo</label>
    <type>Checkbox</type>
</CustomField>