force-app/main/default/objects/CC_Prevision__c/fields/CC_Calculo__c.field-meta.xml
<CustomField>
    <fullName>CC_Calculo__c</fullName>
    <label>Cálculo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>