force-app/main/default/objects/CC_Prevision__c/fields/CC_Chats_Atendidos__c.field-meta.xml
<CustomField>
    <fullName>CC_Chats_Atendidos__c</fullName>
    <label>Chats Atendidos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>