force-app/main/default/objects/CC_Prevision__c/fields/CC_Fecha__c.field-meta.xml
<CustomField>
    <fullName>CC_Fecha__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha</label>
    <type>Date</type>
</CustomField>