force-app/main/default/objects/CC_Prevision__c/fields/CC_MCC__c.field-meta.xml
<CustomField>
    <fullName>CC_MCC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo utilizado para relacionar con el objeto MCC</description>
    <label>MCC</label>
    <referenceTo>CC_MCC__c</referenceTo>
    <relationshipLabel>Previsiones</relationshipLabel>
    <relationshipName>Previsiones</relationshipName>
    <type>Lookup</type>
</CustomField>