force-app/main/default/objects/CC_Prevision__c/fields/CC_Real__c.field-meta.xml
<CustomField>
    <fullName>CC_Real__c</fullName>
    <label>Real</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>