force-app/main/default/objects/CC_Prevision__c/fields/CC_Servicio__c.field-meta.xml
<CustomField>
    <fullName>CC_Servicio__c</fullName>
    <label>Servicio</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACTIVO</fullName>
            </value>
            <value>
                <fullName>BUILDINGCENTER</fullName>
            </value>
            <value>
                <fullName>DOMICILIACIONES</fullName>
            </value>
            <value>
                <fullName>EXTRANJERO</fullName>
            </value>
            <value>
                <fullName>INCIDENCIAS TÉCNICAS</fullName>
            </value>
            <value>
                <fullName>LÍNEA ABIERTA</fullName>
            </value>
            <value>
                <fullName>MARKETING</fullName>
            </value>
            <value>
                <fullName>PASIVO Y VALORES</fullName>
            </value>
            <value>
                <fullName>RECAUDACIÓN</fullName>
            </value>
            <value>
                <fullName>RECURSOS HUMANOS</fullName>
            </value>
            <value>
                <fullName>SERVICIO</fullName>
            </value>
            <value>
                <fullName>SERVICIOS GENERALES</fullName>
            </value>
            <value>
                <fullName>SMARTPHONES</fullName>
            </value>
            <value>
                <fullName>TARJETAS Y COMERCIOS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>