force-app/main/default/objects/CC_Prevision__c/fields/CC_Tipo_Dia__c.field-meta.xml
<CustomField>
    <fullName>CC_Tipo_Dia__c</fullName>
    <description>Campo utilizado para saber si el registro es L-V o S-D</description>
    <label>Tipo de día</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lunes a viernes</fullName>
                <default>true</default>
                <label>Lunes a viernes</label>
            </value>
            <value>
                <fullName>Sábado y domingo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>