force-app/main/default/objects/CC_Prevision__c/fields/CC_TipoDePrevisiones__c.field-meta.xml
<CustomField>
    <fullName>CC_TipoDePrevisiones__c</fullName>
    <label>Tipo de previsiones</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cliente</fullName>
            </value>
            <value>
                <fullName>Empleado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>