force-app/main/default/objects/CC_Prevision__c/recordTypes/CC_Agentes.recordType-meta.xml
<RecordType>
    <fullName>CC_Agentes</fullName>
    <active>true</active>
    <label>Agentes</label>
</RecordType>