force-app/main/default/objects/CC_Prevision__c/recordTypes/CC_Chats.recordType-meta.xml
<RecordType>
    <fullName>CC_Chats</fullName>
    <active>true</active>
    <label>Chats</label>
</RecordType>