force-app/main/default/objects/CC_Prevision__c/recordTypes/CC_PrevisionCaso.recordType-meta.xml
<RecordType>
    <fullName>CC_PrevisionCaso</fullName>
    <active>true</active>
    <description>Previsión caso</description>
    <label>Previsión caso</label>
</RecordType>