force-app/main/default/objects/CC_Prevision__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CC_Activo__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CC_MCC__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>CC_Servicio__c</columns>
    <columns>CC_Tipo_Dia__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CC_Activo__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Previsiones por caso activas</label>
</ListView>