force-app/main/default/objects/CC_Prevision__c/listViews/CC_DXC.listView-meta.xml
<ListView>
    <fullName>CC_DXC</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>DXC</label>
</ListView>