force-app/main/default/objects/CC_Prevision__c/listViews/Prevision_Agentes.listView-meta.xml
<ListView>
    <fullName>Prevision_Agentes</fullName>
    <columns>NAME</columns>
    <columns>CC_Fecha__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CC_Prevision__c.CC_Agentes</value>
    </filters>
    <label>Previsión Agentes</label>
</ListView>