force-app/main/default/objects/CC_Prevision__c/listViews/Prevision_Chats.listView-meta.xml
<ListView>
    <fullName>Prevision_Chats</fullName>
    <columns>NAME</columns>
    <columns>CC_Fecha__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CC_Prevision__c.CC_Chats</value>
    </filters>
    <label>Previsión Chats</label>
</ListView>