force-app/main/default/objects/CC_Prevision__c/listViews/Previsiones_activas.listView-meta.xml
<ListView>
    <fullName>Previsiones_activas</fullName>
    <columns>NAME</columns>
    <columns>CC_MCC__c</columns>
    <columns>CC_Tipo_Dia__c</columns>
    <columns>CC_20__c</columns>
    <columns>CC_21__c</columns>
    <columns>CC_Servicio__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CC_Activo__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Previsiones activas</label>
</ListView>